@@ -9,6 +9,7 @@ INTRO TEXT
 Changes:
  - Fire takes 25% damage from Ice instead of 0%.
  - Ethereal Bat Wing can drop more than once.
+ - Reduced bits/EXP variation from 5% to 3%.
 
 Bug Fixes:
  - Fixed statues giving an element rate decrease not working as intended.
